--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,18 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:7TiK4TA/3VKXQmhNv+SWniZMZ3f04wYHEOjVr6PjNfo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=103.217.208.5
+DB_PORT=5432
+DB_DATABASE=meja_seni_db
+DB_USERNAME=dev_meja_seni
+DB_PASSWORD=]=[-p0o9
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -47,3 +47,13 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SENTRY_LARAVEL_DSN=http://ba2ea0a368914026bbc00ccbb7ec3629@111.68.24.13:9000/12
+SENTRY_TRACES_SAMPLE_RATE=1
+
+S3_HOST=https://yk1.s3.gmedia.id
+S3_ACCESS_KEY=MJSNVRXYK1MDSMDA
+S3_SECRET_KEY=sL4PIpECVLqEL9XSt68WKArz
+S3_REGION=yk1
+S3_BUCKET=mejaseni
+S3_URL=https://mejaseni.yk1.s3.gmedia.id
