--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "sentry/sentry-laravel": "^2.3",
         "spatie/laravel-activitylog": "^3.16",
         "spatie/laravel-permission": "^4.0",
-        "yajra/laravel-datatables-oracle": "^9.15"
+        "yajra/laravel-datatables-oracle": "^9.15",
+        "league/flysystem-aws-s3-v3": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
