--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,19 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
+# DB_CONNECTION=pgsql
+# DB_HOST=103.217.208.5
+# DB_PORT=5432
+# DB_DATABASE=meja_seni_db
+# DB_USERNAME=dev_meja_seni
+# DB_PASSWORD=]=[-p0o9
+
 DB_CONNECTION=pgsql
-DB_HOST=103.217.208.5
+DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=meja_seni_db
-DB_USERNAME=dev_meja_seni
-DB_PASSWORD=]=[-p0o9
+DB_DATABASE=mejaseni
+DB_USERNAME=hallo
+DB_PASSWORD=hallo
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
