--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0",
+        "predis/predis": "^1.1",
         "sentry/sentry-laravel": "^2.3",
         "spatie/laravel-activitylog": "^3.16",
         "spatie/laravel-permission": "^4.0",
