--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
+    },
+    "dependencies": {
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "ioredis": "^4.23.0",
+        "redis-server": "^1.2.2",
+        "socket.io": "^3.1.2"
     }
 }
