--- a/.env.example
+++ b/.env.example
@@ -14,14 +14,14 @@ DB_DATABASE=meja_seni_db
 DB_USERNAME=dev_meja_seni
 DB_PASSWORD=]=[-p0o9
 
-#DB_CONNECTION=pgsql
-#DB_HOST=127.0.0.1
-#DB_PORT=5432
-#DB_DATABASE=mejaseni
-#DB_USERNAME=hallo
-#DB_PASSWORD=hallo
+# DB_CONNECTION=pgsql
+# DB_HOST=127.0.0.1
+# DB_PORT=5432
+# DB_DATABASE=mejaseni
+# DB_USERNAME=hallo
+# DB_PASSWORD=hallo
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=redis
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
@@ -32,6 +32,8 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_CLIENT=predis
+REDIS_PREFIX=""
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
@@ -64,3 +66,11 @@ S3_SECRET_KEY=sL4PIpECVLqEL9XSt68WKArz
 S3_REGION=yk1
 S3_BUCKET=mejaseni
 S3_URL=https://mejaseni.yk1.s3.gmedia.id
+
+DOKU_CLIENT_ID='MCH-0043-1376322085194'
+DOKU_SECRET_KEY='SK-AyVPuu3mi1OxCWR3WaEe'
+DOKU_PRODUCTION=false
+DOKU_EXPIRED_TIME=1440
+
+PUBLISHER_URL=http://127.0.0.1
+BROADCAST_PORT=8080
