--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "ioredis": "^4.23.0",
-        "redis-server": "^1.2.2",
-        "socket.io": "^3.1.2"
+        "laravel-echo": "^1.9.0",
+        "socket.io": "^2.3.0",
+        "socket.io-client": "^2.3.1"
     }
 }
