--- a/.env.example
+++ b/.env.example
@@ -32,8 +32,6 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-REDIS_CLIENT=predis
-REDIS_PREFIX=""
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
@@ -72,5 +70,11 @@ DOKU_SECRET_KEY='SK-AyVPuu3mi1OxCWR3WaEe'
 DOKU_PRODUCTION=false
 DOKU_EXPIRED_TIME=1440
 
-PUBLISHER_URL=http://127.0.0.1
-BROADCAST_PORT=8080
+FACEBOOK_CLIENT_ID = '433633197898558'
+FACEBOOK_CLIENT_SECRET = '1e8a6e123fbee46c1aaeebd6d639cd50'
+FACEBOOK_REDIRECT = 'https://1dc83a507c9d.ngrok.io/auth/facebook/callback'
+
+GOOGLE_CLIENT_ID = '969431683825-t0c9qsp4g13eckvk1rs9i920352mr924.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET = 'vRIR4d0rMDB8WRObvO_1Qd48'
+GOOGLE_REDIRECT = 'https://1dc83a507c9d.ngrok.io/auth/google/callback'
+
