--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "barryvdh/laravel-dompdf": "^0.9.0",
         "doctrine/dbal": "^3.0",
         "dyrynda/laravel-cascade-soft-deletes": "^4.1",
         "fideloper/proxy": "^4.4",
@@ -18,6 +19,7 @@
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "predis/predis": "^1.1",
         "sentry/sentry-laravel": "^2.3",
         "spatie/laravel-activitylog": "^3.16",
