--- a/.env.example
+++ b/.env.example
@@ -33,14 +33,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=mtaufiikh@gmail.com
+MAIL_PASSWORD=bclvfqqfxmccrosu
+MAIL_ENCRYPTION=ssl
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -76,5 +74,5 @@ FACEBOOK_REDIRECT = 'https://1dc83a507c9d.ngrok.io/auth/facebook/callback'
 
 GOOGLE_CLIENT_ID = '969431683825-t0c9qsp4g13eckvk1rs9i920352mr924.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET = 'vRIR4d0rMDB8WRObvO_1Qd48'
-GOOGLE_REDIRECT = 'https://1dc83a507c9d.ngrok.io/auth/google/callback'
+GOOGLE_REDIRECT = 'https://5d941ce4028c.ngrok.io/auth/google/callback'
 
