--- a/.env.prod
+++ b/.env.prod
@@ -2,7 +2,7 @@ APP_NAME="Mejaseni"
 APP_ENV=production
 APP_KEY=base64:7TiK4TA/3VKXQmhNv+SWniZMZ3f04wYHEOjVr6PjNfo=
 APP_DEBUG=false
-APP_URL=http://mejaseni.com
+APP_URL=https://mejaseni.com
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -27,14 +27,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.mejaseni.com
+MAIL_PORT=465
+MAIL_USERNAME=info@mejaseni.com
+MAIL_PASSWORD=66Y8AId8ab1h
+MAIL_ENCRYPTION=ssl
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -49,7 +47,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SENTRY_LARAVEL_DSN=http://ba2ea0a368914026bbc00ccbb7ec3629@111.68.24.13:9000/12
+SENTRY_LARAVEL_DSN=http://110a3c87bfde4218bc76fe57dd7c4ce1@111.68.24.13:9000/16
 SENTRY_TRACES_SAMPLE_RATE=1
 
 S3_HOST=https://yk1.s3.gmedia.id
@@ -61,14 +59,14 @@ S3_URL=https://mejaseni.yk1.s3.gmedia.id
 
 DOKU_CLIENT_ID='MCH-0043-1376322085194'
 DOKU_SECRET_KEY='SK-AyVPuu3mi1OxCWR3WaEe'
-DOKU_PRODUCTION=false
+DOKU_PRODUCTION=true
 DOKU_EXPIRED_TIME=1440
 
-FACEBOOK_CLIENT_ID = '433633197898558'
-FACEBOOK_CLIENT_SECRET = '1e8a6e123fbee46c1aaeebd6d639cd50'
-FACEBOOK_REDIRECT = 'https://1dc83a507c9d.ngrok.io/auth/facebook/callback'
+FACEBOOK_CLIENT_ID = '261930412164571'
+FACEBOOK_CLIENT_SECRET = '70fc5217cf2231c388eda7cfdaf77862'
+FACEBOOK_REDIRECT = 'https://mejaseni.com/auth/facebook/callback'
 
-GOOGLE_CLIENT_ID = '969431683825-t0c9qsp4g13eckvk1rs9i920352mr924.apps.googleusercontent.com'
-GOOGLE_CLIENT_SECRET = 'vRIR4d0rMDB8WRObvO_1Qd48'
-GOOGLE_REDIRECT = 'https://1dc83a507c9d.ngrok.io/auth/google/callback'
+GOOGLE_CLIENT_ID = '884086774954-ol9sgn10sujvjd34aphmm8t13uhr1ot5.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET = 'ewdaNRgZ_KOR6xnZLGenA2C_'
+GOOGLE_REDIRECT = 'https://mejaseni.com/auth/google/callback'
 
