update video session, fun & creative

--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,5 @@ GOOGLE_CLIENT_ID = '969431683825-t0c9qsp4g13eckvk1rs9i920352mr924.apps.googleuse
 GOOGLE_CLIENT_SECRET = 'vRIR4d0rMDB8WRObvO_1Qd48'
 GOOGLE_REDIRECT = 'https://5d941ce4028c.ngrok.io/auth/google/callback'
 
+VIDEO_CONVERTER_HOST=http://127.0.0.1:6578/video
+
