--- a/.env.example
+++ b/.env.example
@@ -67,6 +67,8 @@ DOKU_CLIENT_ID='MCH-0043-1376322085194'
 DOKU_SECRET_KEY='SK-AyVPuu3mi1OxCWR3WaEe'
 DOKU_PRODUCTION=false
 DOKU_EXPIRED_TIME=1440
+DOKU_CC_PAYMENT=false
+DOKU_BCA_PAYMENT=false
 
 FACEBOOK_CLIENT_ID = '433633197898558'
 FACEBOOK_CLIENT_SECRET = '1e8a6e123fbee46c1aaeebd6d639cd50'
@@ -75,6 +77,4 @@ FACEBOOK_REDIRECT = 'https://1dc83a507c9d.ngrok.io/auth/facebook/callback'
 GOOGLE_CLIENT_ID = '969431683825-t0c9qsp4g13eckvk1rs9i920352mr924.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET = 'vRIR4d0rMDB8WRObvO_1Qd48'
 GOOGLE_REDIRECT = 'https://5d941ce4028c.ngrok.io/auth/google/callback'
-
-VIDEO_CONVERTER_HOST=http://127.0.0.1:6578/video
 
