--- a/.env.prod
+++ b/.env.prod
@@ -61,6 +61,8 @@ DOKU_CLIENT_ID='MCH-0043-1376322085194'
 DOKU_SECRET_KEY='SK-AyVPuu3mi1OxCWR3WaEe'
 DOKU_PRODUCTION=true
 DOKU_EXPIRED_TIME=1440
+DOKU_CC_PAYMENT=false
+DOKU_BCA_PAYMENT=false
 
 FACEBOOK_CLIENT_ID = '261930412164571'
 FACEBOOK_CLIENT_SECRET = '70fc5217cf2231c388eda7cfdaf77862'
