--- a/.env.example
+++ b/.env.example
@@ -69,6 +69,7 @@ DOKU_PRODUCTION=false
 DOKU_EXPIRED_TIME=1440
 DOKU_CC_PAYMENT=false
 DOKU_BCA_PAYMENT=false
+DOKU_ALFAMART_PAYMENT=false
 
 FACEBOOK_CLIENT_ID = '433633197898558'
 FACEBOOK_CLIENT_SECRET = '1e8a6e123fbee46c1aaeebd6d639cd50'
