--- a/.env.prod
+++ b/.env.prod
@@ -63,6 +63,7 @@ DOKU_PRODUCTION=true
 DOKU_EXPIRED_TIME=1440
 DOKU_CC_PAYMENT=false
 DOKU_BCA_PAYMENT=false
+DOKU_ALFAMART_PAYMENT=false
 
 FACEBOOK_CLIENT_ID = '261930412164571'
 FACEBOOK_CLIENT_SECRET = '70fc5217cf2231c388eda7cfdaf77862'
