--- a/.env.prod
+++ b/.env.prod
@@ -14,7 +14,6 @@ DB_DATABASE=mejaseni_db
 DB_USERNAME=varx
 DB_PASSWORD=6ZuR8BZpcNt5
 
-
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
@@ -57,13 +56,21 @@ S3_REGION=yk1
 S3_BUCKET=mejaseni
 S3_URL=https://mejaseni.yk1.s3.gmedia.id
 
-DOKU_CLIENT_ID='MCH-0043-1376322085194'
-DOKU_SECRET_KEY='SK-AyVPuu3mi1OxCWR3WaEe'
+#production
+DOKU_CLIENT_ID='MCH-1079-1122459859108'
+DOKU_SECRET_KEY='SK-yRmkPR9rK3aXanbHxNa1'
 DOKU_PRODUCTION=true
 DOKU_EXPIRED_TIME=1440
 DOKU_CC_PAYMENT=false
-DOKU_BCA_PAYMENT=false
-DOKU_ALFAMART_PAYMENT=false
+DOKU_BCA_PAYMENT=true
+
+#sandbox_mejaseni
+#DOKU_CLIENT_ID='MCH-0017-1798036544569'
+#DOKU_SECRET_KEY='SK-kOOKCSlMoEaTSEHqym8S'
+#DOKU_PRODUCTION=false
+#DOKU_EXPIRED_TIME=1440
+#DOKU_CC_PAYMENT=false
+#DOKU_BCA_PAYMENT=true
 
 FACEBOOK_CLIENT_ID = '261930412164571'
 FACEBOOK_CLIENT_SECRET = '70fc5217cf2231c388eda7cfdaf77862'
