--- a/.env.prod
+++ b/.env.prod
@@ -82,3 +82,4 @@ GOOGLE_REDIRECT = 'https://mejaseni.com/auth/google/callback'
 
 VIDEO_CONVERTER_HOST=http://127.0.0.1:6578/video
 
+SOCKET_TOKEN=GKsdbw72JH
