google maps key env

--- a/.env.example
+++ b/.env.example
@@ -72,4 +72,6 @@ GOOGLE_CLIENT_ID = '969431683825-t0c9qsp4g13eckvk1rs9i920352mr924.apps.googleuse
 GOOGLE_CLIENT_SECRET = 'vRIR4d0rMDB8WRObvO_1Qd48'
 GOOGLE_REDIRECT = 'https://5d941ce4028c.ngrok.io/auth/google/callback'
 
+GOOGLE_MAPS_KEY=''
+
 SOCKET_TOKEN=GKsdbw72JH
