--- a/.env.prod
+++ b/.env.prod
@@ -80,6 +80,8 @@ GOOGLE_CLIENT_ID = '884086774954-ol9sgn10sujvjd34aphmm8t13uhr1ot5.apps.googleuse
 GOOGLE_CLIENT_SECRET = 'ewdaNRgZ_KOR6xnZLGenA2C_'
 GOOGLE_REDIRECT = 'https://mejaseni.com/auth/google/callback'
 
+GOOGLE_MAPS_KEY=''
+
 VIDEO_CONVERTER_HOST=http://127.0.0.1:6578/video
 
 SOCKET_TOKEN=GKsdbw72JH
